--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lite-server": "^2.5.4",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4"
   }
 }
